--- a/dishes/pasta.html
+++ b/dishes/pasta.html
@@ -5,13 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Паста</h1>
     <div class="info">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, rerum numquam reprehenderit dolorum, similique recusandae ipsam dignissimos totam, cum tempore ullam. Ex vel commodi et, exercitationem magnam debitis. Voluptas nobis provident doloribus minima ipsam, inventore laboriosam praesentium iusto recusandae animi, earum sequi repellat veritatis! Sequi possimus velit, quas harum odit autem officiis? Nisi doloribus cupiditate labore, culpa deleniti optio distinctio incidunt! Deserunt, est blanditiis tenetur, dolore ipsa cum quas vero corporis sequi corrupti veritatis amet sapiente, iusto ab minus quo earum. Dolore, eligendi neque quod eaque distinctio aperiam est placeat vel dignissimos consequuntur aspernatur inventore quo! Eligendi consequuntur, perspiciatis officia quod incidunt, minima a quisquam tempora facilis omnis earum, quae veniam unde asperiores necessitatibus ea? Non placeat magnam obcaecati incidunt animi modi, totam provident suscipit neque, inventore nam minus sit! Qui repellendus dolorum eligendi alias dolore ex ipsam distinctio corporis, eos cum reprehenderit incidunt consequuntur dolores, ipsum similique iure voluptatem nam deleniti velit atque. Assumenda qui eos labore! Mollitia aliquam consequatur facere accusamus natus blanditiis ad, tempore ea saepe voluptate optio modi fuga nesciunt, qui placeat culpa molestiae. Porro expedita laudantium libero reiciendis, ea doloremque, modi assumenda temporibus voluptate sed necessitatibus cum tempora quibusdam! Atque ea nobis necessitatibus accusantium id sit optio sed. Saepe quia amet nesciunt ipsa dolore. Voluptates at est nisi, magnam doloribus explicabo recusandae optio nemo assumenda, ducimus temporibus sed numquam necessitatibus ratione fuga, totam consequatur voluptate excepturi accusamus rem voluptas aliquam. Ducimus tempore rerum quod consectetur fugiat quasi earum nulla alias eum iusto maxime maiores, nihil repudiandae doloremque quam modi assumenda quo totam expedita error odio. Repellendus quidem laborum repellat totam animi hic blanditiis quam dolores necessitatibus deleniti officia architecto corrupti excepturi enim nesciunt illum earum placeat qui quas exercitationem, fugiat nulla eveniet saepe. Maxime quis est fugiat vel dicta odio itaque! Est distinctio temporibus corrupti reprehenderit facere ad libero nesciunt, nostrum iure labore, ipsam ea dolore voluptatum officia, autem maxime eveniet natus quibusdam dolores impedit asperiores. Minus voluptatem aspernatur laborum! Illo architecto ea, vero impedit quam alias odio voluptas, quos harum facilis ratione veniam ipsa deleniti porro dolores aperiam! Culpa nesciunt necessitatibus eveniet fugiat ullam dicta possimus? Eos at animi aut porro. Provident reprehenderit ex quisquam iste, dolorem earum doloribus, minima vitae, a dolore illo incidunt porro esse. Nobis nulla nam, repellendus autem vero itaque explicabo asperiores minima quam veritatis animi modi sit recusandae provident eum tempore, eveniet ullam ad vel accusantium amet non expedita consequuntur. Ea rem reiciendis quos itaque vero? Vero quam dicta perferendis, corrupti laudantium perspiciatis ut quasi? Temporibus maxime dignissimos blanditiis numquam expedita ipsa aliquam labore, quae magni in adipisci mollitia sequi enim odit. Sequi adipisci nobis assumenda provident. Temporibus at recusandae obcaecati, doloremque quo nemo in cupiditate dicta, minima rerum nam ducimus praesentium facilis. Pariatur est nihil molestiae corrupti eligendi tenetur amet porro at laudantium voluptatum illo fuga sed deleniti rem ullam optio totam officia quaerat distinctio molestias, a consequuntur, exercitationem sint? Officiis, beatae delectus architecto aliquid autem modi soluta illo dolorum iusto ad dolor, porro excepturi rerum vitae ullam laudantium rem impedit vel nobis sapiente sit. Ipsa amet minus veniam minima tempore ab inventore odit, architecto temporibus fuga explicabo, enim laborum, consequuntur sed esse reprehenderit blanditiis! Rem delectus fugiat eius alias consequuntur incidunt dicta ut dignissimos atque sapiente placeat ducimus, nemo totam tempore facere inventore, iure voluptatibus cupiditate, corporis optio accusantium at beatae! Unde harum odio ipsa repellat accusamus magnam esse est, sed sit molestiae dignissimos quam cupiditate quidem magni fuga amet, eum nulla voluptatibus illum? Dicta a necessitatibus eius ab eveniet ad facilis architecto officiis ex mollitia reprehenderit laborum, soluta pariatur! Itaque minus nihil voluptate quasi cumque nostrum, unde aliquam repellendus porro, exercitationem cupiditate. Nihil tempore quaerat quasi illo inventore eligendi eum odit molestias, ab minus iste. Veritatis doloremque perferendis ea at libero eaque!</p>
+        <div class="col1">
+            <button id="bm1">-</button>
+            <h2 id="col1">1</h2>
+            <button id="bp1">+</button>
+        </div>
+
+        <p id="in">afaf</p> <br>
+
+        <p> 1.Поставьте вариться спагетти в большом количестве кипящей подсоленной воды. <br> <br>
+            2.Бекон нарежьте небольшими кусочками и поджарьте на сухой сковороде вместе с раздавленным зубчиком чеснока. <br> <br>
+            3.Отделите белки от желтков, белки для пасты не понадобятся. <br> <br>
+            4.Желтки размешайте вилкой со щепоткой соли. <br> <br>
+            5.Петрушку мелко порубите. <br> <br>
+            6.Со спагетти слейте воду, сразу в горячие макароны добавьте желтки и быстро перемешайте. Затем добавьте бекон, петрушку и сыр и ещё раз перемешайте. <br> <br>
+            7.Подавайте пасту горячей, посыпав свежемолотым чёрным перцем.</p>
     </div>
     <img src="../img/pasta.webp" alt="">
-    <div class="otv"></div>
+    <div class="otv">
+        <h2>1.</h2><input type="checkbox">
+        <h2>2.</h2><input type="checkbox">
+        <h2>3.</h2><input type="checkbox">
+        <h2>4.</h2><input type="checkbox">
+        <h2>5.</h2><input type="checkbox">
+        <h2>6.</h2><input type="checkbox">
+        <h2>7.</h2><input type="checkbox">
+    </div>
+    <script src="../script.js"></script>
 </body>
 </html>
